--- a/assets/styles/rfq.css
+++ b/assets/styles/rfq.css
@@ -12,6 +12,7 @@ body{
 header{
     background-color: rgba(233, 213, 202, 0.4);
 }
+
 .text-nav a{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -36,7 +37,7 @@ button.get{
     align-items: center;
     justify-content: space-between;
     width: 1600px;
-    margin: 70px 87px 0px 87px;
+    padding: 20px 0 0 0;
 }
 .text-nav{
     margin-left: 169px;
@@ -53,4 +54,64 @@ button.get{
 }
 .registration img.search{
     padding-right: 32px;
+}
+.section-head{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.section-head .text-f{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 151px;
+    
+}
+.section-head .text-f h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 72px;
+    background: linear-gradient(90.29deg, #243A73 3.51%, #FB5B01 117.91%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding-bottom: 34px;
+    margin: 0;
+}
+.section-head .text-f h3{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 72px;
+    color: #010F52;
+    width: 1194px;
+    margin: 0;
+}
+.section-head img{
+    margin: 0;
+}
+.text-f{
+    position: relative;
+}
+.text-f img{
+    position: absolute;
+}
+.text-f img.star{
+    left: 1050px;
+    top: 50px;
+}
+.text-f img.el-3{
+    left: 375px;
+    top: 549px;
+}
+.text-f img.el-2{
+    left: 177.36px;
+    top: 491.45px;
+}
+.text-f img.el-1{
+    left: 1375px;
+    top: 473px;    
 }
