--- a/assets/styles/rfq.css
+++ b/assets/styles/rfq.css
@@ -9,17 +9,37 @@ body{
     width: 1731px;
     margin: 0 auto;
 }
-header{
+.section-main{
     background-color: rgba(233, 213, 202, 0.4);
+    padding-bottom: 40px;
 }
-
+/* header{
+    background-color: rgba(233, 213, 202, 0.4);
+} */
+.logo{
+    cursor: pointer;
+}
+.text-nav{
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+}
 .text-nav a{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 30px;
     color: #243A73;
+    cursor: pointer;
+    border-bottom: 1px solid #243a7300;
+    transition: ease-in-out 0.3s;
 }
+
+.text-nav a:hover{
+    transition: ease-in-out 0.3s;
+    border-bottom: 1px solid #243A73;
+}
+
 button.get{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -31,6 +51,7 @@ button.get{
     border: none;
     width: 152px;
     height: 49px;
+    cursor: pointer;
 }
 .nav-head{
     display: flex;
@@ -39,13 +60,13 @@ button.get{
     width: 1600px;
     padding: 20px 0 0 0;
 }
-.text-nav{
+/* .text-nav{
     margin-left: 169px;
     margin-right: 60px;
-}
-.text-nav a{
+} */
+/* .text-nav a{
     padding-right: 60px;
-}
+} */
 .registration{
     display: flex;
     align-items: center;
@@ -104,14 +125,79 @@ button.get{
     top: 50px;
 }
 .text-f img.el-3{
-    left: 375px;
-    top: 549px;
+    right: 1100px;
+    top: 510px;
 }
 .text-f img.el-2{
-    left: 177.36px;
-    top: 491.45px;
+    right: 1220px;
+    top: 230px;
 }
 .text-f img.el-1{
-    left: 1375px;
-    top: 473px;    
+    left: 1100px;
+    top: 350px;  
+}
+.slaider-rfq{
+    width: 260px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto
+}
+.slaider-rfq .line-1{
+    width: 40px;
+    border: 5px solid #D8D8D8;
+    border-radius: 10ex;
+}
+.slaider-rfq #line-3{
+    width: 60px;
+    border: 5px solid #243A73;
+    border-radius: 10ex;
+}
+
+.section-servies{
+    background: linear-gradient(180deg, #F5F5F5 0%, rgba(245, 245, 245, 0) 100%);
+}
+.section-servies .main{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    color: #0E538C;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.card-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card-text .p-card-1{
+    width: 260px;
+}
+.card-section #card-1{
+    width: 381px;
+    height: 554px;
+    background: url(/assets/imgs/Rectangle\ 42.svg);
+}
+.card-section #card-1 h1{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+    text-align: center;
+}
+
+.card-section #card-1 p{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
 }
