--- a/assets/styles/smart.css
+++ b/assets/styles/smart.css
@@ -81,11 +81,11 @@ button.get:hover{
 .registration img.search{
     padding-right: 32px;
 }
-/* .sect-img-t{
+/* /* .sect-img-t{
     display: flex;
     flex-direction: column;
 } */
-.section-head{
+/* .section-head{
     display: flex;
     justify-content: space-between;
 }
@@ -93,7 +93,7 @@ button.get:hover{
     /* display: flex;
     flex-direction: column;
     width: 55%;
-    text-align: left; */
+    text-align: left;
     width: 800px;
     padding: 56px 50px 250px 121px;
 }
@@ -109,7 +109,7 @@ button.get:hover{
     position: absolute;
     top: 180px;
     right: 220px;
-}
+} */
 
 .section-head h1{
     font-family: 'Inter', sans-serif;
@@ -132,4 +132,253 @@ button.get:hover{
     display: flex;
     align-items: center;
     color: #010F52;
+    padding-top: 15px;
+    padding-bottom: 65px;
+} 
+.section-head{
+    /* width: 1728px; */
+    display: flex;
+    justify-content: space-between;
+    padding-top: 100px;
+    padding-left: 130px;
+}
+.sect-img-t button{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #FFFFFF;
+
+    width: 251px;
+    height: 80px;
+    background: #243A73;
+    box-shadow: 6px 6px 30px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    border: none;
+    transition: all ease 0.2s;
+    cursor: pointer;
+}
+.sect-img-t button:hover{
+    background: #101c3b;
+    transition: all ease 0.2s;
+    transform: scale(0.9);
+}
+
+.sect-img{
+    position: relative;
+}
+.sect-img .im-2{
+    position: absolute;
+    height: 573px;
+    right: 250px;
+    top: 30px;
+}
+
+.slaider-smart{
+    width: 260px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-bottom: 120px;
+}
+.slaider-smart .line-1{
+    width: 40px;
+    border: 5px solid #D8D8D8;
+    border-radius: 10ex;
+    transition: all ease 0.2s;
+    cursor: pointer;
+}
+.slaider-smart .line-1:hover{
+    width: 60px;
+    border: 5px solid #243A73;
+    border-radius: 10ex;
+    transition: all ease 0.2s;
+}
+.title-fut h1{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #010F52;
+}
+.title-fut p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    color: #4E4E4E;
+    padding-top: 15px;
+}
+.card-fut .card-1{
+    width: 388px;
+    height: 237px;
+    background: #FFFFFF;
+    box-shadow: 10px 10px 30px 20px #F5F5F5;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
+}
+.card-fut h4{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-transform: capitalize;
+    color: #010F52;
+    text-align: left;
+    padding-bottom: 25px;
+    /* position: absolute;
+    right: 0px; */
+}
+.card-fut p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    color: #737576;
+    text-align: left;
+}
+.card-fut{
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    width: 879px;
+    height: 580px;
+}
+.desc-text{
+    padding-top: 105px;
+    padding-bottom: 165px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-2{
+    width: 364px;
+    height: 298px;
+    background: #F2F2F2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.title-eval h1{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #010F52;
+}
+.title-eval p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    color: #4E4E4E;
+    padding-top: 30px;
+    padding-bottom: 65px;
+}
+.block-card h3{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-transform: capitalize;
+    color: #010F52;
+}
+.block-card p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    color: #737576;
+    padding-top: 15px;
+}
+.bl-card{
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr); */
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+.section-eval{
+    padding-bottom: 200px;
+    
+}
+.section-gen{
+    height: 416px;
+    background: #F7ECDE;
+}
+.title-gen h1{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #010F52;
+    padding-top: 60px;
+    padding-bottom: 85px;
+}
+.card-3{
+    width: 349px;
+    height: 286px;
+    background: #FFFFFF;
+    box-shadow: 10px 10px 30px #F2F2F2;
+    border-radius: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.card-3 h3{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-transform: capitalize;
+    color: #010F52;
+    text-align: left;
+    padding-top: 18px;
+    padding-bottom: 10px;
+}
+.card-3 p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    color: #737576;
+    text-align: left;
+}
+.block_card_gen{
+    width: 1714px;
+    height: 810px;
+    display: grid;
+    grid-template-columns: repeat(4, 2fr);
+    padding-bottom: 110px;
+}
+.section-touch{
+    padding-top: 700px;
 }
